<resources>
    <string name="app_name">CheapSleep</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">My places</string>
    <string name="create_fragment_label">Edit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_list_fragment">Hello first fragment</string>
    <string name="hello_create_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="show_map">Show Map</string>
    <string name="new_place">New Place</string>
    <string name="my_places_list">My Places</string>
    <string name="about">About</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_fragment_label">View map</string>
    <string name="edit_latitude">Edit latitude</string>
    <string name="edit_longitude">Edit longitude</string>
    <string name="edit_location_set_button">Set location</string>
    <string name="edit_price">Price</string>
    <string name="login_activity_login_button">Log in</string>
    <string name="login_activity_register_button">Register</string>
    <string name="login_activity_username_label">username</string>
    <string name="login_activity_password_label">password</string>
    <string name="register_username">username</string>
    <string name="register_password">password</string>
    <string name="register_name">Name</string>
    <string name="register_surname">Surname</string>
    <string name="register_phone">Phone number</string>
    <string name="register_camera_btn">Camera</string>
    <string name="register_gallery_btn">Gallery</string>
    <string name="register_ok_btn">Register</string>
    <string name="registe_close_btn">Close</string>

    <string name="list_fragment_autor_rb">Author</string>
    <string name="list_fragment_tip_rb">Type</string>
    <string name="list_fragment_ocena_rb">Price</string>
    <string name="list_fragment_datum_rb">Date</string>
    <string name="list_fragment_format_label">Format datuma je: ddMMyyyy</string>
    <string name="list_fragment_datumod_label">From date:</string>
    <string name="list_fragment_datumdo_label">Until date:</string>
    <string name="list_fragment_ok_btn">OK</string>
    <string name="list_fragment_reset_label">Cancel</string>
    <string name="viewmyplace_close_button">Close</string>
    <string name="view_fragment_label">Place view</string>
    <string name="popup_menu_view">View place</string>
    <string name="popup_menu_edit">Edit</string>
    <string name="popup_menu_show">Show on map</string>
    <string name="edit_save_btn">Save</string>
    <string name="leaderboard_fragment_label">Leaderboard</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="search_places">Search places</string>
    <string name="RatingButton">Make a review</string>
    <string name="review_fragment_label">Write a review</string>
    <string name="cameraPlace">Camera</string>
    <string name="galleryPlace">Gallery</string>
    <string name="delete">Delete</string>

    <string-array name="TypesOfPlaces">
        <item>Choose accomodation type</item>
        <item>Hostel</item>
        <item>Apartman</item>
        <item>Motel</item>
        <item>Soba</item>
        <item>Drugo</item>
    </string-array>
</resources>