<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cheapsleep.MainActivity">

        <item
            android:id="@+id/action_show_map"
            android:icon="@drawable/outline_map_white_24"
            android:orderInCategory="100"
            android:title="@string/show_map"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_new_place"
            android:icon="@drawable/outline_edit_white_24"
            android:orderInCategory="100"
            android:title="@string/new_place"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_places_list"
            android:icon="@drawable/outline_list_white_24"
            android:orderInCategory="100"
            android:title="@string/my_places_list"
            app:showAsAction="ifRoom" />
        <!--    <item-->
        <!--        android:id="@+id/action_search_places"-->
        <!--        android:icon="@drawable/outline_manage_search_white_24"-->
        <!--        android:orderInCategory="100"-->
        <!--        android:title="@string/search_places"-->
        <!--        app:showAsAction="ifRoom" />-->

        <item
            android:id="@+id/action_leaderboard"
            android:icon="@drawable/outline_leaderboard_white_24"
            android:orderInCategory="100"
            android:title="@string/leaderboard"
            app:showAsAction="ifRoom" />
</menu>